# bread

./: .gitignore  README.md  README.rst  api.html  genindex.html  index.html  objects.inv  py-modindex.html  readme.html  requirements.txt  search.html  searchindex.js  setup.cfg
.github/workflows/: build_documentation.yml
_sources/autoapi/bread/: index.rst.txt
_sources/autoapi/bread/algo/: index.rst.txt
_sources/autoapi/bread/algo/lineage/: index.rst.txt
_sources/autoapi/bread/algo/lineage/_lineage/: index.rst.txt
_sources/autoapi/bread/algo/lineage/_utils/: index.rst.txt
_sources/autoapi/bread/algo/lineage/_validation/: index.rst.txt
_sources/autoapi/bread/data/: index.rst.txt
_sources/autoapi/bread/data/_data/: index.rst.txt
_sources/autoapi/bread/data/_exception/: index.rst.txt
_sources/autoapi/bread/data/_utils/: index.rst.txt
_sources/examples/: cli.rst.txt
_sources/examples/lineage/: accuracies.ipynb.txt
autoapi/bread/: index.html
autoapi/bread/algo/: index.html
autoapi/bread/algo/lineage/: index.html
autoapi/bread/algo/lineage/_lineage/: index.html
autoapi/bread/algo/lineage/_utils/: index.html
autoapi/bread/algo/lineage/_validation/: index.html
autoapi/bread/data/: index.html
autoapi/bread/data/_data/: index.html
autoapi/bread/data/_exception/: index.html
autoapi/bread/data/_utils/: index.html
docs/: Makefile  requirements.txt
docs/source/: api.rst  conf.py  index.rst
docs/source/examples/: index.rst
docs/source/examples/lineage/: accuracies.ipynb  demo.html  demo.ipynb  visualize_lineages.py
docs/source/examples/lineage/outputs/: colony003_lineage_budlum_cli.csv  colony003_lineage_empty.csv  colony003_lineage_expspeed_cli.csv
examples/: cli.html  index.html
examples/lineage/: accuracies.html  accuracies.ipynb  demo.html  demo.ipynb
paper/: TP.cls  main.tex
src/bread/algo/lineage/: __init__.py  _lineage.py  _utils.py  _validation.py
src/bread/cli/: _cli.py
src/bread/data/: __init__.py  _data.py  _utils.py
src/bread/gui/: __main__.py  _editor.py  _gui.py  _state.py  _viewer.py  _wizards.py
