[metadata]
name = bread
description = tracking and determining lineage of budding yeast cells
author = G. BRENNA, F. MASSARD, N. VADOT
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
version = 0.2
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
install_requires =
	numpy
	scipy
	opencv-python
python_requires = >=3.6
package_dir =
	=src
zip_safe = no

[options.extras_require]
doc =
	sphinx
	sphinx_rtd_theme
	sphinx-autoapi
	sphinxcontrib-napoleon
	nbsphinx
data =
	tifffile
	h5py
gui =
	# note : we need PySide (LGPL license) instead of PyQt (GPL license)
	# because GPL imposes the whole project is licensed GPL
	# qtpy provides a uniform layer to support PyQt5, PyQt6, PySide2, PySide6 (see https://github.com/spyder-ide/qtpy)
	qtpy
	# we use the latest version
	PySide6
	# high-performance graphing
	pyqtgraph