[metadata]
name = bread
description = tracking and determining lineage of budding yeast cells
author = G. BRENNA, F. MASSARD, N. VADOT
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
version = 0.3
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
install_requires =
	numpy==1.21.5
	scipy==1.7.3
	opencv-python==4.5.5.64
python_requires = >=3.6
package_dir =
	=src
zip_safe = no

[options.extras_require]
doc =
	sphinx
	sphinx_rtd_theme
	sphinx-autoapi
	sphinxcontrib-napoleon
	nbsphinx
data =
	tifffile==2021.11.2
	h5py==3.6.0
gui =
	# note : we need PySide (LGPL license) instead of PyQt (GPL license)
	# because GPL imposes the whole project is licensed GPL
	# qtpy provides a uniform layer to support PyQt5, PyQt6, PySide2, PySide6 (see https://github.com/spyder-ide/qtpy)
	# qtpy==2.0.1
	# We dropped qtpy because it was giving us trouble with QAction
	# we use the latest version
	PySide6==6.2.4
	# high-performance graphing
	pyqtgraph==0.12.4

[options.package_data]
bread =
	gui/fugue-icons-3.5.6/**